--- a/Data/Data Preprocessing.ipynb
+++ b/Data/Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "54adf61b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "213430c0",
    "metadata": {
     "scrolled": false
@@ -101,13 +101,13 @@
        "5                                          0                   0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.read_excel('Winter23_logs.xlsx').drop(0)\n",
+    "df=pd.read_excel(\"C:/Users/Ruchita/Desktop/MEng_ECE/Fall 23/Creative applications of NLP/Project/Github/TalkMaster/Data/logs/Winter23_logs.xlsx\").drop(0)\n",
     "df['Sent staff to room?']=df['Sent staff to room?'].fillna('0')\n",
     "df['Requires further investigation to resolve?']=df['Requires further investigation to resolve?'].fillna('0')\n",
     "df=df.drop(['Time','Outcome'], axis=1)\n",
@@ -117,12 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "17aaa083",
    "metadata": {},
    "outputs": [],
    "source": [
-    "patterns =[ r'accident', r'mistake', r'no response']\n",
+    "patterns =[ r'accident', r'mistake', r'no response', r'false alarm']\n",
     "for pattern in patterns:\n",
     "    condition = df['Description of problem'].str.contains(pattern, regex=True) & ~df['Description of problem'].isna()\n",
     "    df = df[~condition]"
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "87d5ca33",
    "metadata": {},
    "outputs": [],
@@ -140,20 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d0b8e34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Description of problem']=df[df['Description of problem'] != ' ']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "843d7a75",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -186,15 +176,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>4489</td>\n",
-       "      <td>4507</td>\n",
-       "      <td>4507</td>\n",
-       "      <td>4507</td>\n",
+       "      <td>4433</td>\n",
+       "      <td>4451</td>\n",
+       "      <td>4451</td>\n",
+       "      <td>4451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
-       "      <td>342</td>\n",
-       "      <td>3067</td>\n",
+       "      <td>340</td>\n",
+       "      <td>3063</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -209,8 +199,8 @@
        "      <th>freq</th>\n",
        "      <td>70</td>\n",
        "      <td>126</td>\n",
-       "      <td>4134</td>\n",
-       "      <td>3178</td>\n",
+       "      <td>4078</td>\n",
+       "      <td>3123</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -218,19 +208,19 @@
       ],
       "text/plain": [
        "       Received from: Description of problem  \\\n",
-       "count            4489                   4507   \n",
-       "unique            342                   3067   \n",
+       "count            4433                   4451   \n",
+       "unique            340                   3063   \n",
        "top              MR 6                  login   \n",
        "freq               70                    126   \n",
        "\n",
        "       Requires further investigation to resolve? Sent staff to room?  \n",
-       "count                                        4507                4507  \n",
+       "count                                        4451                4451  \n",
        "unique                                          5                   3  \n",
        "top                                             0                   0  \n",
-       "freq                                         4134                3178  "
+       "freq                                         4078                3123  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "e44b95d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('cleaned_winter_data.csv', index=False)"
+    "df.to_csv(\"C:/Users/Ruchita/Desktop/MEng_ECE/Fall 23/Creative applications of NLP/Project/Github/TalkMaster/Data/logs/cleaned_winter_data.xlsx\", index=False)"
    ]
   },
   {
