updated proccesed data

--- a/Data/Data Preprocessing.ipynb
+++ b/Data/Data Preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "213430c0",
    "metadata": {
     "scrolled": false
@@ -101,7 +101,7 @@
        "5                                          0                   0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,12 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "17aaa083",
    "metadata": {},
    "outputs": [],
    "source": [
-    "patterns =[ r'accident', r'mistake', r'no response', r'false alarm']\n",
+    "patterns =[ r'accident', r'mistake', r'no response', r'false alarm', r'duty']\n",
     "for pattern in patterns:\n",
     "    condition = df['Description of problem'].str.contains(pattern, regex=True) & ~df['Description of problem'].isna()\n",
     "    df = df[~condition]"
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "87d5ca33",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "843d7a75",
    "metadata": {
     "scrolled": true
@@ -176,15 +176,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>4433</td>\n",
-       "      <td>4451</td>\n",
-       "      <td>4451</td>\n",
-       "      <td>4451</td>\n",
+       "      <td>4424</td>\n",
+       "      <td>4442</td>\n",
+       "      <td>4442</td>\n",
+       "      <td>4442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
        "      <td>340</td>\n",
-       "      <td>3063</td>\n",
+       "      <td>3062</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -199,8 +199,8 @@
        "      <th>freq</th>\n",
        "      <td>70</td>\n",
        "      <td>126</td>\n",
-       "      <td>4078</td>\n",
-       "      <td>3123</td>\n",
+       "      <td>4069</td>\n",
+       "      <td>3114</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -208,19 +208,19 @@
       ],
       "text/plain": [
        "       Received from: Description of problem  \\\n",
-       "count            4433                   4451   \n",
-       "unique            340                   3063   \n",
+       "count            4424                   4442   \n",
+       "unique            340                   3062   \n",
        "top              MR 6                  login   \n",
        "freq               70                    126   \n",
        "\n",
        "       Requires further investigation to resolve? Sent staff to room?  \n",
-       "count                                        4451                4451  \n",
+       "count                                        4442                4442  \n",
        "unique                                          5                   3  \n",
        "top                                             0                   0  \n",
-       "freq                                         4078                3123  "
+       "freq                                         4069                3114  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "e44b95d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"C:/Users/Ruchita/Desktop/MEng_ECE/Fall 23/Creative applications of NLP/Project/Github/TalkMaster/Data/logs/cleaned_winter_data.xlsx\", index=False)"
+    "df.to_csv(\"C:/Users/Ruchita/Desktop/MEng_ECE/Fall 23/Creative applications of NLP/Project/Github/TalkMaster/Data/logs/cleaned_winter_data.csv\", index=False)"
    ]
   },
   {
