classification and lm modeling code

--- a/Data/Data Preprocessing.ipynb
+++ b/Data/Data Preprocessing.ipynb
@@ -241,8 +241,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "917ef626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sent staff to room?\n",
+       "0    3114\n",
+       "1    1326\n",
+       "        2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sent staff to room?'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa0138d",
    "metadata": {},
    "outputs": [],
    "source": []
