Updating classification and RAG folders and adding data to .gitignore
Changed data loading paths in notebooks.

--- a/RAG/Data-Cleaning-process/Cleaning_documents_in_RAG.ipynb
+++ b/RAG/Data-Cleaning-process/Cleaning_documents_in_RAG.ipynb
@@ -893,6 +893,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Manually checking every node in sample documents. "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 27,
       "metadata": {
